GameView added, created default views for every existing component.